# rocket-jwt-authorization

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: login.rs
examples/views/: login.tera
src/: lib.rs  panic.rs
