[package]
name = "rocket-jwt-authorization"
version = "0.2.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/magiclen/rocket-jwt-authorization"
homepage = "https://magiclen.org/rocket-jwt-authorization"
keywords = ["rocket", "server", "web", "authorization", "jwt"]
categories = ["parser-implementations", "web-programming"]
description = "This crate provides a procedural macro to create request guards used for authorization."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

rocket = "0.5"
rocket-include-tera = "0.5"

once_cell = "1"

jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies.validators]
version = "0.25"
default-features = false
features = ["derive", "rocket", "regex"]
